--- a/docs/planning/2021/sprints/sprint 4/02-23-to-03-05.md
+++ b/docs/planning/2021/sprints/sprint 4/02-23-to-03-05.md
@@ -3,18 +3,15 @@
 ## Goal/notes for Sprint
 
 1. start BETA-04
-2. Finish first cut of Tickets
+2. Finish first cut of Tickets - this was done last sprint - for this sprint we need to see if 3 column/recursive will be solved then generate this apps again
 3. start automatic deployments
 4. start solving the recursive UI template problem with GJS
 
 ## UX Assignments
 
-Please note to look for specifics tasks in Github this just gives the overall goals for each team member
+Please note: look for specifics tasks in Github this just gives the overall goals for each team member
 
-- Arun
-  - design template # 3
-  - design template # 4
-  - design template # 5
+- Arun - he is not available therefore Arjit will do all the UX work
 
 - Arjit
   - produce HTML for template # 3 - use Grapedrop if it makes sense
@@ -23,13 +20,18 @@ Please note to look for specifics tasks in Github this just gives the overall go
 
 ## Developer Assignments
 
-Please note to look for specifics tasks in Github this just gives the overall goals for each team member
+Please note:
+
+- Look for specifics tasks in Github this just gives the overall goals for each team member
+- Definition of complete: The functionality is available live in STAGE
 
 - JP
   - add red template
   - hour of Power RBAC - THIS IS  MORE IMPORTANT SINCE MITHUN IS LEAVING!
   - add static type drop down
   - bugs - do we have any that are major blockers?
+    - admin screen?
+    - landing page
   - finish ticketing app - Potential changes could be:
     - lets talk what is left todo that would be more important than hour of power
     - add ckEditor
@@ -42,6 +44,7 @@ Please note to look for specifics tasks in Github this just gives the overall go
     - solve 4 output issue
     - change from Fetch to something that solves the issue
     - admin screen?
+    - landing page
   
 - Manavalan
   - finish aws deployment manager for generated app
@@ -56,12 +59,15 @@ Please note to look for specifics tasks in Github this just gives the overall go
     - the recursive problem is in the same area of the code as the shipping template problem
 
 - Vignesh
+  - learn node
+  - start to use containers for development
+  - install Geppetto and help test
 
 ---
 
 ## DevOps Assignments
 
-Please note to look for specifics tasks in Github this just gives the overall goals for each team member
+Please note: look for specifics tasks in Github this just gives the overall goals for each team member
 
 
 - Harishsundhar
