--- a/docs/planning/2021/sprints/sprint 3/02-09-to-02-19.md
+++ b/docs/planning/2021/sprints/sprint 3/02-09-to-02-19.md
@@ -2,7 +2,11 @@
 
 ## Sprint completion notes
 
-1. all the UX tasked rolled over to  next sprint both UX people were assigned other projects
+1. completed thirty three (33) tasks
+2. rolled over 20 tasks - keep in mind this is not accurate - adding it in here as a training/discipline
+3. completed the generation of type 1 dynamic drop downs - big milestone
+4. first cut of ticket app 
+5. all the UX tasked rolled over to  next sprint both UX people were assigned other projects
 
 ## Goal/notes for Sprint
 
