--- a/docs/planning/2021/sprints/sprint 4/02-23-to-03-05.md
+++ b/docs/planning/2021/sprints/sprint 4/02-23-to-03-05.md
@@ -1,5 +1,11 @@
 # Sprint plan Tuesday Feb 23 to Friday March 5
 
+## Sprint completion notes
+
+1. JP was out Wednesday March 3rd and Wednesday Feb 24 for 1/2 day
+2. Vignesh was out Thursday Feb 25th and Friday Feb 26th
+
+
 ## Goal/notes for Sprint
 
 1. start BETA-04
@@ -15,6 +21,7 @@ Please note: look for specifics tasks in Github this just gives the overall goal
 
 - Arjit
   - produce HTML for template # 3 - use Grapedrop if it makes sense
+    1. created the Mrs Travel template in GrapesJS
   - produce HTML for template # 4 - use Grapedrop if it makes sense
   - produce HTML for template # 5 - use Grapedrop if it makes sense
 
@@ -27,30 +34,44 @@ Please note:
 
 - JP
   - add red template
+    1. added a template but it WAS NOT the Telco template there was confusion - what was added was the HP template with a RED line (ugh)
+    2. good news - document was created that describes how to add a new template
   - hour of Power RBAC - THIS IS  MORE IMPORTANT SINCE MITHUN IS LEAVING!
   - add static type drop down
+    1. did not start - focused shifted to Modifiers
   - bugs - do we have any that are major blockers?
-    - admin screen?
+    - admin screen
+      1. focused shifted to Modifiers
     - landing page
+      1. focused shifted to Modifiers
   - finish ticketing app - Potential changes could be:
     - lets talk what is left todo that would be more important than hour of power
     - add ckEditor
     - add history
     - add notifications (MailChimp)
     - add file attachments
+    1. focused shifted to Modifiers
 
 - Mithun
   - finalize RBAC
-    - solve 4 output issue
-    - change from Fetch to something that solves the issue
-    - admin screen?
-    - landing page
+    - solve 4 output issue - this was done, turned out to be config issues
+    - change from Fetch to something that solves the issue - config issue
+    - created add/manage user screen
+      - refactor old tech debt - we were making calls directly from the UI to Camunda
+    - admin screen?  - NOPE top work took all sprint
+    - landing page  - NOPE top work took all sprint
   
 - Manavalan
   - finish aws deployment manager for generated app
-  - finish analysis of route 53 cli for auto creation of DNS for generated apps using geppettosoftware.io domain  
+    1. completed
+    2. using this process/code he started the auto-deployment tasks
+  
+  - finish analysis of route 53 cli for auto creation of DNS for generated apps using geppettosoftware.io domain
+    1. this was not started - it was decided to auto-deploy first with just the IP address
   - maybe landing screen (only if auto deployments are completed)
+    1. auto-deployments took precedent
   - hour of Power aws training - #822
+    1. auto-deployments took precedent
 
 - George
   - analyze the issue with recursive algorithm
@@ -69,7 +90,6 @@ Please note:
 
 Please note: look for specifics tasks in Github this just gives the overall goals for each team member
 
-
 - Harishsundhar
   - complete the Lambda/Repo seven day clean up
   - support Geppetto deployments
@@ -77,6 +97,7 @@ Please note: look for specifics tasks in Github this just gives the overall goal
     - continue to learn node - once you finish with Node start with handlebars
 
 - Arunodhayam
+  - was out for 1/2 the sprint on honeymoon
   - solve the volume issue in fargate
   - support geppetto deployments
   - hour of power
