end of sprint 4 motes

--- a/docs/planning/2021/sprints/sprint 4/02-23-to-03-05.md
+++ b/docs/planning/2021/sprints/sprint 4/02-23-to-03-05.md
@@ -1,10 +1,66 @@
 # Sprint plan Tuesday Feb 23 to Friday March 5
 
-## Sprint completion notes
+## General Notes
 
+***
+
+1. added two freshers Vignesh and Chandra
+
+- Vignesh started at the start of the sprint
+- Chandra started at the end of the sprint
+  
 1. JP was out Wednesday March 3rd and Wednesday Feb 24 for 1/2 day
 2. Vignesh was out Thursday Feb 25th and Friday Feb 26th
+3. Mithun was out on Friday March 5th
+4. George was out Friday March 5th
+5. Arunodhayam did not return from honeymoon till Monday March 1 missed 1/2 the sprint
 
+***
+
+## Sprint completion notes
+
+- Recursive UI Problem - made a lot of headway towards solving
+  1. George was able to create 2 and three column screens
+  2. late in the sprint ran into issues with Dynamic drops downs not sure if the issues were solved
+  3. George did make enough progress to start on permitting the end user to modify the template within Geppetto
+
+- Automatic deployment using Githubactions and Fargate
+  1. good progress we think all code has been completed to enable this
+  2. all local tests using Manavalan personal GitHub account were successful
+  3. completed code to create private repo and pull creds from vault
+  4. Auto deployment position us to charge for Geppetto usage
+  5. [Auto deploy design doc](https://github.com/dan-castillo/geppettotest/tree/dev/docs/design/deployment_manager)
+
+- RBAC
+  1. Mithun completed all the changes for RBAC to be fully baked into generated applications
+  2. this was a critical step towards completing the Ticket app
+
+- Red Template
+  1. there was confusing as to what was the Red Template
+  2. Dan/Venkat thought that the Red Template was a telco temple
+  3. the reality was that the "red" template was nothing more than the HP template with a "RED" line
+  4. it was added to Geppetto generation but we should NOT use this
+  5. good news was that it provided the chance to create document walking through developer on adding a templates which will be used when the next set of template are ready to be added
+  6. [Template Instructions](https://github.com/dan-castillo/geppettotest/blob/dev/docs/design/template_document/add_new_template_documentation.md)
+
+- Next version of ticket app
+  1. the components that were needed for the second version took to long to complete the two components are: (RBAC, Recursive Algorithm)
+  2. since the components above are believed to be completed next version of the ticket app will be attempted early in the next sprint
+  3. completed design of Modifiers meta data concept - this is crucial as it allows the person using Geppetto to modify Flows in this case GpSearch and GpGetAll based on UserID and or other attributes
+  4. The modifier concept is also needed to allow for landing screens to display data based on userid - a use case for this is displaying Graphs and Charts based on the user 
+
+- New templates
+  1. Arjit completed the HTML/CSS work for two new templates (Mrs. Travel and WeConnect)
+  2. we will keep the templates on hold util we have developers with enough experience to add them to Geppetto
+
+- Infra
+  1. solved attaching volumes to Fargate tasks using spot instances - this is key to lowering our cost so that we can charge low enough for auto deployments to be competitive
+
+  - Freshers
+    1. Vignesh completed node course and is moving onto Typescript
+    2. Chandra joined at the end of the sprint Wednesday March 3rd but has already completed 4 sections of the Node course
+
+***
 
 ## Goal/notes for Sprint
 
