--- a/docs/planning/2021/sprints/sprint 5/03-09-to-03-19.md
+++ b/docs/planning/2021/sprints/sprint 5/03-09-to-03-19.md
@@ -11,53 +11,14 @@
 
 ## Sprint completion notes
 
-- Recursive UI Problem - made a lot of headway towards solving
-  1. George was able to create 2 and three column screens
-  2. late in the sprint ran into issues with Dynamic drops downs not sure if the issues were solved
-  3. George did make enough progress to start on permitting the end user to modify the template within Geppetto
-
-- Automatic deployment using Githubactions and Fargate
-  1. good progress we think all code has been completed to enable this
-  2. all local tests using Manavalan personal GitHub account were successful
-  3. completed code to create private repo and pull creds from vault
-  4. Auto deployment position us to charge for Geppetto usage
-  5. [Auto deploy design doc](https://github.com/dan-castillo/geppettotest/tree/dev/docs/design/deployment_manager)
-
-- RBAC
-  1. Mithun completed all the changes for RBAC to be fully baked into generated applications
-  2. this was a critical step towards completing the Ticket app
-
-- Red Template
-  1. there was confusing as to what was the Red Template
-  2. Dan/Venkat thought that the Red Template was a telco temple
-  3. the reality was that the "red" template was nothing more than the HP template with a "RED" line
-  4. it was added to Geppetto generation but we should NOT use this
-  5. good news was that it provided the chance to create document walking through developer on adding a templates which will be used when the next set of template are ready to be added
-  6. [Template Instructions](https://github.com/dan-castillo/geppettotest/blob/dev/docs/design/template_document/add_new_template_documentation.md)
-
-- Next version of ticket app
-  1. the components that were needed for the second version took to long to complete the two components are: (RBAC, Recursive Algorithm)
-  2. since the components above are believed to be completed next version of the ticket app will be attempted early in the next sprint
-  3. completed design of Modifiers meta data concept - this is crucial as it allows the person using Geppetto to modify Flows in this case GpSearch and GpGetAll based on UserID and or other attributes
-  4. The modifier concept is also needed to allow for landing screens to display data based on userid - a use case for this is displaying Graphs and Charts based on the user 
-
-- New templates
-  1. Arjit completed the HTML/CSS work for two new templates (Mrs. Travel and WeConnect)
-  2. we will keep the templates on hold util we have developers with enough experience to add them to Geppetto
-
-- Infra
-  1. solved attaching volumes to Fargate tasks using spot instances - this is key to lowering our cost so that we can charge low enough for auto deployments to be competitive
-
-  - Freshers
-    1. Vignesh completed node course and is moving onto Typescript
-    2. Chandra joined at the end of the sprint Wednesday March 3rd but has already completed 4 sections of the Node course
+this are done at the end of the sprint
 
 ***
 
 ## Goal/notes for Sprint
 
 1. start BETA-05
-2. Ticket App with 3 column layout and RBAC - this was substatially completed at the end of sprint 4 but not tested
+2. Ticket App with 3 column layout and RBAC - this was substantially completed at the end of sprint 4 but not tested
 3. start test automatic deployments - will be impacted by Manavalan moving out to other project
 4. complete template editing within Geppetto
 5. create two more templates beyond WeConnect and Mrs. Travel
@@ -66,10 +27,10 @@
 
 Please note: look for specifics tasks in Github this just gives the overall goals for each team member
 
-
-
 - Arjit
- 
+- produce HTML for template # 5
+- produce HTML for template # 6
+
 ## Developer Assignments
 
 Please note:
@@ -78,66 +39,46 @@ Please note:
 - Definition of complete: The functionality is available live in STAGE
 
 - JP
+  - finalize and test version two of tkt app
   - Complete modifiers
-  - hour of Power RBAC - THIS IS  MORE IMPORTANT SINCE MITHUN IS LEAVING!
-  - add static type drop down
-    1. did not start - focused shifted to Modifiers
-  - bugs - do we have any that are major blockers?
-    - admin screen
-      1. focused shifted to Modifiers
-    - landing page
-      1. focused shifted to Modifiers
-  - finish ticketing app - Potential changes could be:
-    - lets talk what is left todo that would be more important than hour of power
-    - add ckEditor
-    - add history
-    - add notifications (MailChimp)
-    - add file attachments
-    1. focused shifted to Modifiers
-
- 
-- Manavalan
-  - finish aws deployment manager for generated app
-    1. completed
-    2. using this process/code he started the auto-deployment tasks
-  
-  - finish analysis of route 53 cli for auto creation of DNS for generated apps using geppettosoftware.io domain
-    1. this was not started - it was decided to auto-deploy first with just the IP address
-  - maybe landing screen (only if auto deployments are completed)
-    1. auto-deployments took precedent
-  - hour of Power aws training - #822
-    1. auto-deployments took precedent
+  - priority bugs as they arise
 
 - George
-  - analyze the issue with recursive algorithm
-    - create a design before we code - we only want to do this once
-    - refactor the template code to allow for the ability to remove a template from the deployment - this is needed to allow for deployments to enterprise customers with only their templates are shipped/deployed - see the HP problem!
-    - the recursive problem is in the same area of the code as the shipping template problem
+  - finish solving bug with 2/3 column screens
+  - complete ability to edit template within Geppetto
+  - modify project creation component to allow users to "see" the template they pick
+  - start landing page manager
 
 - Vignesh
+  - learn typescript
+  - learn handlebars
+  - first Geppetto assignment - add the Mrs. Travel Template
+
+- Chandra
   - learn node
+  - learn typescript
   - start to use containers for development
   - install Geppetto and help test
 
----
+***
 
 ## DevOps Assignments
 
 Please note: look for specifics tasks in Github this just gives the overall goals for each team member
 
 - Harishsundhar
-  - complete the Lambda/Repo seven day clean up
   - support Geppetto deployments
-  - Hour of power
-    - continue to learn node - once you finish with Node start with handlebars
+  - KT for AWS deployments
+  - Hour of power (this becomes the focus)
+    - start to use containers for development
+    - learn node
+    - learn typescript
+    - learn handlebars
 
 - Arunodhayam
-  - was out for 1/2 the sprint on honeymoon
-  - solve the volume issue in fargate
   - support geppetto deployments
   - hour of power
+    - start to use containers for development
     - learn node
-
-## Exiting/Leaving the project at the start of Sprint 4
-
-- Siva - moved to a new project on Feb 17 with 3 days left in sprint 3
+    - learn typescript
+    - learn handlebars
