priority for dev ops team

--- a/docs/planning/2021/sprints/sprint 5/03-09-to-03-19.md
+++ b/docs/planning/2021/sprints/sprint 5/03-09-to-03-19.md
@@ -67,8 +67,9 @@ Please note:
 Please note: look for specifics tasks in Github this just gives the overall goals for each team member
 
 - Harishsundhar
-  - support Geppetto deployments
+  - support Geppetto deployments - only if Arunodhayam is not available
   - KT for AWS deployments
+    - create doc in design folder covering vault and configuration (scopes/etc) needed in Github as well as AWS
   - Hour of power (this becomes the focus)
     - start to use containers for development
     - learn node
@@ -76,7 +77,7 @@ Please note: look for specifics tasks in Github this just gives the overall goal
     - learn handlebars
 
 - Arunodhayam
-  - support geppetto deployments
+  - support geppetto deployments - primary
   - hour of power
     - start to use containers for development
     - learn node
