sprint planned committed to

--- a/docs/planning/2021/sprints/sprint 5/03-09-to-03-19.md
+++ b/docs/planning/2021/sprints/sprint 5/03-09-to-03-19.md
@@ -40,14 +40,14 @@ Please note:
 
 - JP
   - finalize and test version two of tkt app
-  - Complete modifiers
+  - Complete modifiers - what can be done by 3-19?
   - priority bugs as they arise
 
 - George
   - finish solving bug with 2/3 column screens
-  - complete ability to edit template within Geppetto
-  - modify project creation component to allow users to "see" the template they pick
-  - start landing page manager
+  - complete ability to edit template within Geppetto - #987
+  - modify project creation component to allow users to "see" the template they pick - stretch goal
+  - start landing page manager/application entry manager - stretch goal
 
 - Vignesh
   - learn typescript
@@ -70,7 +70,7 @@ Please note: look for specifics tasks in Github this just gives the overall goal
   - support Geppetto deployments - only if Arunodhayam is not available
   - KT for AWS deployments
     - create doc in design folder covering vault and configuration (scopes/etc) needed in Github as well as AWS
-  - Hour of power (this becomes the focus)
+  - Hour of power (this becomes the focus) - spend probably 2 hrs per day or more depending on how fast Kt gets done
     - start to use containers for development
     - learn node
     - learn typescript
