adding notes to late plan

--- a/docs/planning/2021/sprints/sprint 6/03-23-to-04-02.md
+++ b/docs/planning/2021/sprints/sprint 6/03-23-to-04-02.md
@@ -2,15 +2,47 @@
 
 ## Goal/notes for Sprint
 
+1. start BETA-06
+
+## General Notes
+
+***
+
+1. fresher Chandra resigned at start of sprint due to medical issues
+2. Arunodhayam was assigned to Pluralsight project at start of sprint
+
+## Sprint completion notes
+
+this are done at the end of the sprint
+
+***
+
 ## UX Assignments
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
+
+- Arjit
+  - develop four (4) more templates - this wil give us nine in total
 
 ## Developer Assignments
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
----
+- JP
+  - Complete modifiers
+  - complete and test version three of tkt app
+  - priority bugs as they arise
+
+- George
+  - modify project creation component to allow users to "see" the template they pick 
+  - start landing page manager/application entry manager 
+
+- Vignesh
+  - first Geppetto assignment - add the Mrs. Travel Template
+  - add Silent Nature template
+  - review template doc with JP, George and Dan
+
+***
 
 ## DevOps Assignments
 
