finished sprint plan

--- a/docs/planning/2021/sprints/sprint 6/03-23-to-04-02.md
+++ b/docs/planning/2021/sprints/sprint 6/03-23-to-04-02.md
@@ -6,7 +6,7 @@
 
 ## General Notes
 
-***
+---
 
 1. fresher Chandra resigned at start of sprint due to medical issues
 2. Arunodhayam was assigned to Pluralsight project at start of sprint
@@ -15,7 +15,7 @@
 
 this are done at the end of the sprint
 
-***
+---
 
 ## UX Assignments
 
@@ -29,21 +29,32 @@ Please note to look for specifics tasks in Github this just gives the overall go
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - JP
+
   - Complete modifiers
   - complete and test version three of tkt app
   - priority bugs as they arise
 
 - George
-  - modify project creation component to allow users to "see" the template they pick 
-  - start landing page manager/application entry manager 
+
+  - modify project creation component to allow users to "see" the template they pick
+  - add WeConnect template
+  - start landing page manager/application entry manager
 
 - Vignesh
   - first Geppetto assignment - add the Mrs. Travel Template
   - add Silent Nature template
   - review template doc with JP, George and Dan
 
-***
+---
 
 ## DevOps Assignments
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
+
+- Harish
+  - finish auto deployment
+  - support geppetto deployments
+  - Hour of Power
+    - complete Node
+    - complete Typescript
+    - stretch goal - start handle bars
