--- a/docs/planning/2021/sprints/sprint 6/03-23-to-04-02.md
+++ b/docs/planning/2021/sprints/sprint 6/03-23-to-04-02.md
@@ -10,6 +10,8 @@
 
 1. fresher Chandra resigned at start of sprint due to medical issues
 2. Arunodhayam was assigned to Pluralsight project at start of sprint
+3. George was assigned to Pluralsight at the start of the sprint
+4. Vignesh was out 3 days March 24, 25 and 26 because of illness then again due to his father going to ICU another 3 days from March 31, April 1, and April 2
 
 ## Sprint completion notes
 
@@ -23,6 +25,8 @@ Please note to look for specifics tasks in Github this just gives the overall go
 
 - Arjit
   - develop four (4) more templates - this wil give us nine in total
+  - we changed direction to display preview pages based on the work that George started
+    - we now have designs for dashboards that can be shown to the user as preview
 
 ## Developer Assignments
 
@@ -31,16 +35,17 @@ Please note to look for specifics tasks in Github this just gives the overall go
 - JP
 
   - Complete modifiers
-  - complete and test version three of tkt app
+    - this is taking longer than expected due to some tech debt (not passing JWT token) and it was more complex - good progress was made in completing the creation and generation for of the modifiers
+  - complete and test version three of tkt app - on hold until we can finish the modifiers end to end
   - priority bugs as they arise
 
-- George
+- George **was on Pluralsight the whole sprint**
 
   - modify project creation component to allow users to "see" the template they pick
   - add WeConnect template
   - start landing page manager/application entry manager
 
-- Vignesh
+- Vignesh **was out most of the sprint**
   - first Geppetto assignment - add the Mrs. Travel Template
   - add Silent Nature template
   - review template doc with JP, George and Dan
@@ -52,9 +57,10 @@ Please note to look for specifics tasks in Github this just gives the overall go
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - Harish
-  - finish auto deployment
+  - finish auto deployment - **this was completed! we can now do live deployments to Fargate**
+  - completed attaching EFS volumes to Spot instances - **this lowers our operating costs**
   - support geppetto deployments
   - Hour of Power
-    - complete Node
-    - complete Typescript
+    - complete Node - **completed**
+    - complete Typescript **completed**
     - stretch goal - start handle bars
