--- a/docs/planning/2021/sprints/sprint 7/04-06-to-04-16.md
+++ b/docs/planning/2021/sprints/sprint 7/04-06-to-04-16.md
@@ -2,16 +2,66 @@
 
 ## Goal/notes for Sprint
 
+1. start BETA-07
+2. complete modifiers
+3. third version of Tkt APP
+4. first attempt at cloning projects using version 3 of tkt app
+5. TBD - depending if George is back
+
+## General Notes
+
+---
+
+## Sprint completion notes
+
+this are done at the end of the sprint
+
+---
+
 ## UX Assignments
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
+- Arjit
+  - continue developing static pages and add more templates until we get to nine (9) total
+
 ## Developer Assignments
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
+
+- JP
+
+  - Complete modifiers
+    1. fix tech debt with regard to passing JWT to the MicroServices
+    2. slight modification to back end modifier generation
+    3. add the modifier to the front end generation
+  - complete and test version three of tkt app
+  - priority bugs as they arise
+
+- George **TBD**
+
+  - finis adding WeConnect template
+  - start landing page manager/application entry manager
+
+- Vignesh **TBD**
+
+  - finish adding the Mrs. Travel Template
+  - add Silent Nature template
+  - review template doc with JP, George and Dan
+
+  - Harish
+    - first Geppetto assignment as a developer **congrats**
 
 ---
 
 ## DevOps Assignments
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
+
+- Harish
+  - finish auto deployment - **this was completed! we can now do live deployments to Fargate**
+  - support geppetto deployments
+  - Hour of Power
+    - complete Node - **completed**
+    - complete Typescript **completed**
+    - stretch goal - start handle bars
