first cut clone manager

--- a/docs/planning/2021/sprints/sprint 7/04-06-to-04-16.md
+++ b/docs/planning/2021/sprints/sprint 7/04-06-to-04-16.md
@@ -5,7 +5,7 @@
 1. start BETA-07
 2. complete modifiers
 3. third version of Tkt APP
-4. first attempt at cloning projects using version 3 of tkt app
+4. first attempt at cloning projects called CloneManager
 5. TBD - depending if George is back
 
 ## General Notes
@@ -36,6 +36,8 @@ Please note to look for specifics tasks in Github this just gives the overall go
     2. slight modification to back end modifier generation
     3. add the modifier to the front end generation
   - complete and test version three of tkt app
+  - adjust the generation PIll to handle live deployments
+    - we need to send notifications via email (MailChimp)
   - priority bugs as they arise
 
 - George **TBD**
@@ -51,6 +53,7 @@ Please note to look for specifics tasks in Github this just gives the overall go
 
   - Harish
     - first Geppetto assignment as a developer **congrats**
+    - start CloneManager
 
 ---
 
