early sprint update

--- a/docs/planning/2021/sprints/sprint 7/04-06-to-04-16.md
+++ b/docs/planning/2021/sprints/sprint 7/04-06-to-04-16.md
@@ -10,6 +10,8 @@
 
 ## General Notes
 
+1. George only returned for one day to help with the Lalit demo - solving header issue in preview
+
 ---
 
 ## Sprint completion notes
@@ -32,22 +34,25 @@ Please note to look for specifics tasks in Github this just gives the overall go
 - JP
 
   - Complete modifiers
-    1. fix tech debt with regard to passing JWT to the MicroServices
-    2. slight modification to back end modifier generation
-    3. add the modifier to the front end generation
+
+    - Fix tech debt with regard to passing JWT to the MicroServices
+      - the JWT was not much of an issue
+      - the tech debt issue had to do with updates on screen designer and its ability to save entity mappings see task # 784
+    - slight modification to back end modifier generation
+    - add the modifier to the front end generation
+
   - complete and test version three of tkt app
   - adjust the generation PIll to handle live deployments
     - we need to send notifications via email (MailChimp)
   - priority bugs as they arise
 
-- George **TBD**
+- George
 
-  - finis adding WeConnect template
-  - start landing page manager/application entry manager
+  - see notes was pulled to Pluralsight
 
-- Vignesh **TBD**
+- Vignesh
 
-  - finish adding the Mrs. Travel Template
+  - finish adding the Mrs. Travel Template - added by George for preview
   - add Silent Nature template
   - review template doc with JP, George and Dan
 
