starting close out of sprint 7 start connector design

--- a/docs/planning/2021/sprints/sprint 8/04-20-to-04-30.md
+++ b/docs/planning/2021/sprints/sprint 8/04-20-to-04-30.md
@@ -2,6 +2,10 @@
 
 ## Goal/notes for Sprint
 
+1. start BETA-08
+2. start connector framework
+3. finish clone manager (UI)
+
 ## UX Assignments
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
