--- a/docs/planning/2021/sprints/sprint 8/04-20-to-04-30.md
+++ b/docs/planning/2021/sprints/sprint 8/04-20-to-04-30.md
@@ -1,21 +1,91 @@
-# Sprint plan Tuesday April 20 to Friday April 30
+# Sprint eight plan - Tuesday April 20 to Friday April 30
 
 ## Goal/notes for Sprint
 
 1. start BETA-08
 2. start connector framework
 3. finish clone manager (UI)
+4. start Angular training for new team members
+
+---
+
+## Sprint completion notes
+
+these are done at the end of the sprint
+
+---
 
 ## UX Assignments
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
+- Arjit
+  - continue developing static pages and add more templates until we get to nine (9) total
+
 ## Developer Assignments
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
+
+- JP
+
+  - priority bugs as they arise
+  - start the Connector frame work
+    - work/coordinate with Krishnakumar
+    - get rid or hardcoded flows and microflows
+      - we still need a seed file
+    - connectors need to be "attached" to a microflow and not the flow
+    - refactor connector object
+      - get rid off "defaultConnector" file
+      - add a "type" attribute to connector object
+      - add more attributes to the connector object - see what postman/newman require
+      - add a property called "call-from" this property captures which "area" "front-end" or "back-end" the "call" is made from
+        - this is only here to support the Lalit (migration) use case where they only want to call from the "front-end" most of the time the call to an extrenal api/system will be from the back-end/microservices
+
+  - Complete modifiers (if this is complete demo with tkt app)
+  - Fix tech debt with regard to passing JWT to the MicroServices - is this complete?
+  
+  - Harish
+    - work with JP to attach CloneManager to front end
+    - complete CloneManager back end
+      - need to add a field to Project model/collection called "share-visibility"
+      - share-visibility values
+        - "shared-to-all" - indicates that the project can be seen by all users
+        - for other shared values - use the values in the default User object (speak with Dan first)
+    - stretch goal - add a template to Geppetto
+    - hour of power
+      - start learning Angular
+
+  - Naveenkumar
+    - THIS DEPENDS ON A CONVERSATION WITH THOMAS
+    - POSSIBLE ASSIGNMENTS
+      - add at least two templates to Geppetto and use them to generate the tkt app
+      - adjust the generation PIll to handle live deployments
+      - we need to send notifications via email (MailChimp)
+      - **start the work on the SEF** this is very challenging specially for a fresher
+
+  - Krishnakumar
+    - experience person to work with JP on Connectors
+
+- Sundarapandeeswar
+  - learn Angular
+  - install Geppetto locally
+  - familiarize yourself with Screen designer
+  - start to learn GrapesJS
+  - the end goal for this learning is to migrate Geppetto front end to latest version of Angular (12)
+
+- TBD second person to learn Angular
+  - learn Angular
+  - install Geppetto locally
+  - familiarize yourself with Screen designer
+  - start to learn GrapesJS
+  - the end goal for this learning is to migrate Geppetto front end to latest version of Angular (12)
 
 ---
 
 ## DevOps Assignments
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
+
+- Harish
+  - support geppetto deployments
+  - generate and deploy to ECS tkt app daily to make sure it is working
