modify connector assignements

--- a/docs/planning/2021/sprints/sprint 8/04-20-to-04-30.md
+++ b/docs/planning/2021/sprints/sprint 8/04-20-to-04-30.md
@@ -30,22 +30,19 @@ Please note to look for specifics tasks in Github this just gives the overall go
 
   - priority bugs as they arise
   - start the Connector frame work
+    - create design document describing how the flows/micro flows are used in the generation process specifically how and where they are used in the Workers and Workers Helpers
     - work/coordinate with Krishnakumar
-    - get rid or hardcoded flows and microflows
-      - we still need a seed file
     - connectors need to be "attached" to a microflow and not the flow
     - refactor connector object
+      - the connector object should have the basic information needed by a POSTMAN collection
       - get rid off "defaultConnector" file
       - add a "type" attribute to connector object
-      - add more attributes to the connector object - see what postman/newman require
       - add a property called "call-from" this property captures which "area" "front-end" or "back-end" the "call" is made from
-        - this is only here to support the Lalit (migration) use case where they only want to call from the "front-end" most of the time the call to an extrenal api/system will be from the back-end/microservices
+      - this is only here to support the Lalit (migration) use case where they only want to call from the "front-end" most of the time the call to an external api/system will be from the back-end/microservices
+    question: there are the two collections for flow: project flows and project flow component
 
-  - Complete modifiers (if this is complete demo with tkt app)
-  - Fix tech debt with regard to passing JWT to the MicroServices - is this complete?
-  
   - Harish
-    - work with JP to attach CloneManager to front end
+    - work with JP to attach CloneManager to front end **this is low priority**
     - complete CloneManager back end
       - need to add a field to Project model/collection called "share-visibility"
       - share-visibility values
@@ -73,7 +70,7 @@ Please note to look for specifics tasks in Github this just gives the overall go
   - start to learn GrapesJS
   - the end goal for this learning is to migrate Geppetto front end to latest version of Angular (12)
 
-- TBD second person to learn Angular
+- Surendar
   - learn Angular
   - install Geppetto locally
   - familiarize yourself with Screen designer
