final update to start of sprint plan

--- a/docs/planning/2021/sprints/sprint 8/04-20-to-04-30.md
+++ b/docs/planning/2021/sprints/sprint 8/04-20-to-04-30.md
@@ -4,7 +4,7 @@
 
 1. start BETA-08
 2. start connector framework
-3. finish clone manager (UI)
+3. finish clone manager
 4. start Angular training for new team members
 
 ---
@@ -20,6 +20,8 @@ these are done at the end of the sprint
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - Arjit
+  - using Geppetto screen designer create a professional Tkt app
+    - point out which components are missing that were is Grapedrop
   - continue developing static pages and add more templates until we get to nine (9) total
 
 ## Developer Assignments
@@ -27,19 +29,32 @@ Please note to look for specifics tasks in Github this just gives the overall go
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - JP
-
   - priority bugs as they arise
-  - start the Connector frame work
+  - start the Connector framework
     - create design document describing how the flows/micro flows are used in the generation process specifically how and where they are used in the Workers and Workers Helpers
     - work/coordinate with Krishnakumar
+    - connectors will now need their own generation manager in order to generate their configurations
+      - when generating the ConnectorGenManager generates everything captured in the Newman collection **EXCEPT** credentials
+      - all credentials for using a connector need to be added at runtime on the generated application ADMIN screen
+      - we need a generation manager that can generate the application's Admin page, this is not the same as Admin-manager
+        - JP and Dan to talk this AdminGenManager - Mithun might have worked on this for WCMX
     - connectors need to be "attached" to a microflow and not the flow
     - refactor connector object
       - the connector object should have the basic information needed by a POSTMAN collection
       - get rid off "defaultConnector" file
       - add a "type" attribute to connector object
       - add a property called "call-from" this property captures which "area" "front-end" or "back-end" the "call" is made from
-      - this is only here to support the Lalit (migration) use case where they only want to call from the "front-end" most of the time the call to an external api/system will be from the back-end/microservices
-    question: there are the two collections for flow: project flows and project flow component
+      - "call-from" only here to support the Lalit (migration) use case where they only want to call from the "front-end" most of the time the call to an external api/system will be from the back-end/microservices
+
+  - Krishnakumar
+    - work with JP on Connectors
+      - collection upload for Newman testing
+      - test with the following public apis:
+        - MLSGrid - this API returns a huge object (over 100 fields) but its only searchable no updates
+        - Twilio - this we can do CRUD plus we have done this before
+        - Hangout - we could use this in the future
+      - use and enhance gepFileManager for file upload - [gepFileManager](https://github.com/dan-castillo/gepFileManager/tree/dharanya_dev)
+      - entity creation using Newman results
 
   - Harish
     - work with JP to attach CloneManager to front end **this is low priority**
@@ -48,20 +63,11 @@ Please note to look for specifics tasks in Github this just gives the overall go
       - share-visibility values
         - "shared-to-all" - indicates that the project can be seen by all users
         - for other shared values - use the values in the default User object (speak with Dan first)
-    - stretch goal - add a template to Geppetto
     - hour of power
       - start learning Angular
 
   - Naveenkumar
-    - THIS DEPENDS ON A CONVERSATION WITH THOMAS
-    - POSSIBLE ASSIGNMENTS
-      - add at least two templates to Geppetto and use them to generate the tkt app
-      - adjust the generation PIll to handle live deployments
-      - we need to send notifications via email (MailChimp)
-      - **start the work on the SEF** this is very challenging specially for a fresher
-
-  - Krishnakumar
-    - experience person to work with JP on Connectors
+    - add a template to Geppetto and use them to generate the tkt app
 
 - Sundarapandeeswar
   - learn Angular
