added Arunodhayam to plan

--- a/docs/planning/2021/sprints/sprint 8/04-20-to-04-30.md
+++ b/docs/planning/2021/sprints/sprint 8/04-20-to-04-30.md
@@ -66,8 +66,12 @@ Please note to look for specifics tasks in Github this just gives the overall go
     - hour of power
       - start learning Angular
 
-  - Naveenkumar
-    - add a template to Geppetto and use them to generate the tkt app
+- Naveenkumar
+  - add a template to Geppetto and use them to generate the tkt app
+
+- Arunodhayam
+  - finish typescript
+  - add a template to Geppetto
 
 - Sundarapandeeswar
   - learn Angular
@@ -89,6 +93,6 @@ Please note to look for specifics tasks in Github this just gives the overall go
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
-- Harish
+- Arunodhayam
   - support geppetto deployments
   - generate and deploy to ECS tkt app daily to make sure it is working
