added Bala and Manavalan tasks

--- a/docs/planning/2021/sprints/sprint 8/04-20-to-04-30.md
+++ b/docs/planning/2021/sprints/sprint 8/04-20-to-04-30.md
@@ -46,6 +46,14 @@ Please note to look for specifics tasks in Github this just gives the overall go
       - add a property called "call-from" this property captures which "area" "front-end" or "back-end" the "call" is made from
       - "call-from" only here to support the Lalit (migration) use case where they only want to call from the "front-end" most of the time the call to an external api/system will be from the back-end/microservices
 
+  - Manavalan
+    - work JP on the first portion of Connectors
+      - microflow object and design
+      - microflow needs to be "attached" to the microflow step instead of the Flow component object
+      - when we generate the "external-type" microflows the admin screen manager/generator needs to
+      be changed to allow for the security credentials for the external APIs to be save in a local DB  and
+      accessed via the generated application admin screen
+
   - Krishnakumar
     - work with JP on Connectors
       - collection upload for Newman testing
@@ -73,7 +81,12 @@ Please note to look for specifics tasks in Github this just gives the overall go
   - finish typescript
   - add a template to Geppetto
 
-  -
+- Bala
+  - learn async/await in node
+  - install geppetto locally - as of Friday 4/23 did not have a machine with 16GB
+  - add WeConnect to Geppetto including the generator
+    - must solve the side navigation problem for all templates (speak with JP or George)
+
 
 - Sundarapandeeswar
   - learn Angular
