final mid sprint updates

--- a/docs/planning/2021/sprints/sprint 8/04-20-to-04-30.md
+++ b/docs/planning/2021/sprints/sprint 8/04-20-to-04-30.md
@@ -79,7 +79,7 @@ Please note to look for specifics tasks in Github this just gives the overall go
 
 - Arunodhayam
   - finish typescript
-  - add a template to Geppetto
+  - add a template to Geppetto asl Ajit which one is ready work with Naveen and Bala
 
 - Bala
   - learn async/await in node
